<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ushaswini.myfavouritemovies_fragments.MovieAddFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay">

        <TextView
            android:text="@string/tv_Name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:id="@+id/tv_Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/tv_description"
            android:layout_alignStart="@+id/tv_description" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tv_Name_value"
            android:layout_alignBaseline="@+id/tv_Name"
            android:layout_alignBottom="@+id/tv_Name"
            android:layout_toRightOf="@+id/tv_description"
            android:layout_alignRight="@+id/tv_description_value"
            android:layout_alignEnd="@+id/tv_description_value" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_genre"
            android:layout_toEndOf="@+id/tv_description"
            android:id="@+id/spinner_genre"
            android:layout_alignLeft="@+id/seekBar_rating"
            android:layout_alignStart="@+id/seekBar_rating" />

        <TextView
            android:text="@string/tv_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:id="@+id/tv_rating"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:layout_below="@+id/spinner_genre"
            android:layout_alignLeft="@+id/tv_genre"
            android:layout_alignStart="@+id/tv_genre" />

        <TextView
            android:text="@string/tv_year_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:id="@+id/tv_year"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:layout_below="@+id/tv_rating"
            android:layout_alignLeft="@+id/tv_rating"
            android:layout_alignStart="@+id/tv_rating" />

        <SeekBar
            android:id="@+id/seekBar_rating"
            style="@android:style/Widget.DeviceDefault.Light.SeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btn_addMovie"
            android:layout_alignRight="@+id/btn_addMovie"
            android:layout_alignTop="@+id/tv_rating"
            android:layout_toRightOf="@+id/tv_description"
            android:max="5"
            android:progress="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:layout_alignBottom="@+id/tv_year"
            android:layout_alignLeft="@+id/seekBar_rating"
            android:layout_alignStart="@+id/seekBar_rating"
            android:id="@+id/tv_year_value"
            android:layout_toLeftOf="@+id/tv_rating_numeric"
            android:layout_toStartOf="@+id/tv_rating_numeric" />

        <TextView
            android:text="@string/tv_idmb_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_IDMB"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:layout_alignBaseline="@+id/tv_idmb_value"
            android:layout_alignBottom="@+id/tv_idmb_value"
            android:layout_alignLeft="@+id/tv_year"
            android:layout_alignStart="@+id/tv_year" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/tv_year_value"
            android:layout_alignLeft="@+id/tv_year_value"
            android:layout_alignStart="@+id/tv_year_value"
            android:layout_marginTop="24dp"
            android:id="@+id/tv_idmb_value"
            android:layout_alignRight="@+id/tv_year_value"
            android:layout_alignEnd="@+id/tv_year_value" />

        <TextView
            android:text="@string/tv_genre_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:id="@+id/tv_genre"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:layout_below="@+id/tv_description_value"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp" />

        <TextView
            android:text="@string/tv_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:id="@+id/tv_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:layout_below="@+id/tv_Name_value"
            android:layout_alignLeft="@+id/tv_description_value"
            android:layout_alignStart="@+id/tv_description_value" />

        <Button
            android:text="@string/btn_addmovie_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_addMovie"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="14dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:id="@+id/tv_description_value"
            android:background="@drawable/background"
            android:height="100dp"
            android:layout_below="@+id/tv_description"
            android:layout_alignLeft="@+id/tv_genre"
            android:layout_alignStart="@+id/tv_genre"
            android:layout_toStartOf="@+id/tv_rating_numeric"
            android:layout_toLeftOf="@+id/tv_rating_numeric" />

        <TextView
            android:id="@+id/tv_rating_numeric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/seekBar_rating"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:text="0" />


    </RelativeLayout>
</FrameLayout>
